# synology-devinfra

./: .bazelrc  .gitignore  BUILD.bazel  CHANGELOG.md  MODULE.bazel  README.md  multitool.lock.json  requirements.in
.github/: cspell.yaml  renovate-regex.json  renovate.json
.github/workflows/: ci.yaml  release.yaml
json/: de_vanity_ubuntu_versions.bzl
lib/: dockercompose.bzl  version-cleanup.bzl
lib/patches/: rules_tar-1.0.1_tarball_extensions.patch
spk/bazel-remote-cache/: BUILD.bazel  docker-compose.tpl
spk/cmaas/: BUILD.bazel  docker-compose.tpl
spk/consul/: BUILD.bazel  README.md  consul.plist  consul.service
spk/consul/tests/: BUILD.bazel
spk/nomad-server/: BUILD.bazel  MIT-LICENSE.txt  example-nomad-client-config  nomad-avahi.service  nomad.plist  nomad.service  postinst  preuninst
spk/nomad-server/tests/: BUILD.bazel
spk/redis-stack/: BUILD.bazel  docker-compose.tpl
spk/talospxe/: BUILD.bazel  BUILD.dnsmasq.bazel  README.md  bsdpserver.py  bsdpy.yaml  dnsmasq.conf  dnsmasq.d.conf  docker-compose.tpl  envdefault.py  foreign_cc.dnsmasq.bazel  pkg-user-bsdp-dnsmasq.service  pkg-user-bsdp-server.service  postinst  start-stop-status
spk/talospxe/tests/: BUILD.bazel
spk/victoriametrics/: BUILD.bazel  README.md  victoriametrics.service
tests/: BUILD.bazel
