load("@rules_python//python:pip.bzl", "compile_pip_requirements")
load("@rules_synology//:defs.bzl", "maintainer")

maintainer(
    name = "chickenandpork",
    maintainer_name = "Allan Clark",
    maintainer_url = "http://github.com/chickenandpork",
    visibility = ["//visibility:public"],
)

# bazel run //:requirements.update
compile_pip_requirements(
    name = "requirements",
    src = "requirements.in",
    requirements_txt = "requirements_lock.txt",
)
