module(
    name = "synology-minecraft-bedrock",
    version = "1.0",
)

bazel_dep(name = "buildifier_prebuilt", version = "8.2.0.2", dev_dependency = True)

bazel_dep(name = "aspect_bazel_lib", version = "2.21.1")
bazel_dep(name = "bazel_skylib", version = "1.8.1")
bazel_dep(name = "rules_multitool", version = "1.9.0")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_pkg", version = "1.1.0")
bazel_dep(name = "rules_synology", version = "0.2.3")

local_path_override(module_name = "rules_synology", path = "../rules_synology")

http_file = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_file")

# Application icon, sourced from squarespace CDN
http_file(
    name = "buchgr_icon",
    sha256 = "17b0b844fd52deff5328df2ce05e12e6d754ebda75ba1065ee0aa2127f12dcab",
    urls = [
        "https://avatars.githubusercontent.com/u/1388179?s=1000&v=4",
    ],
)

http_file(
    name = "maas_icon",
    sha256 = "db55a612a931a90f4a212e684b4a122e18d61c1e79cbcf26f022577bd464f5b2",
    urls = [
        "https://images.squarespace-cdn.com/content/v1/500a3673c4aa9263a8955641/1551919834344-GX7V5SG9ZDQ1E7XU6JKV/maas-logo.png",
        "https://dashboard.snapcraft.io/site_media/appmedia/2019/10/maas-snap.png",
    ],
)

# an SVG icon requires rules_synology-0.2.3 or later for resize tool
http_file(
    name = "nomad_icon",
    sha256 = "58ba3cd1f0a6e696482e60252c58ac132912582dc6089849936112dfd2ecc862",
    urls = [
        "https://hyzxph.media.zestyio.com/blog-nomad-list.svg",
    ],
)

http_file(
    name = "talos_icon",
    sha256 = "c5214bfd4e3ea4d0679eb217b327b9355927f446e8fe890a4610a5c8775af3a3",
    urls = [
        "https://www.talos.dev/images/logo.svg",
    ],
)

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name="dnsmasq",
    build_file = "//spk/talospxe:BUILD.dnsmasq.bazel",
    sha256 = "f622682848b33677adb2b6ad08264618a2ae0a01da486a93fd8cd91186b3d153",
    strip_prefix = "dnsmasq-2.91",
    urls = [
        "https://thekelleys.org.uk/dnsmasq/dnsmasq-2.91.tar.xz",
    ],
)




load_json_file = use_repo_rule("//json:load_json_file.bzl", "load_json_file")

load_json_file(
    name = "local_renovate_regex",
    src = "//:.github/renovate-regex.json",
    variable_name = "version_json",
)

multitool = use_extension("@rules_multitool//multitool:extension.bzl", "multitool")
multitool.hub(lockfile = "//:multitool.lock.json")
use_repo(multitool, "multitool")

# register toolchains by wildcard :) (thanks, github/cameron-martin)
register_toolchains("@rules_synology//toolchains:all")

