load("@aspect_bazel_lib//lib:expand_template.bzl", "expand_template_rule")
load("@local_renovate_regex//:json.bzl", "version_json")
load("//lib:dockercompose.bzl", "dockercompose")

PKG_SERIAL = 1

CONTAINER_NAME = "bazel-remote-cache"  # technically the same values, but self-documents better

VOLUMENAME = "bazel-remote-cache"

# To check payloads, try for example:
#     bazel build spk/bazel-remote-cache:bazel-remote-cache   && \
#     tar xzf bazel-bin/spk/bazel-remote-cache/bazel-remote-cache.spk -O scripts/postinst
dockercompose(
    name = "bazel-remote-cache",
    compose = ":dockercompose",
    description = "Jakob Buchgraber's Bazel Cache Service",
    healthcheck_containernames = [CONTAINER_NAME],
    icon_file = "@buchgr_icon//file",
    maintainer = "//:chickenandpork",
    # os_min_ver = "7.0-1",  # correct-format=[^\d+(\.\d+){1,2}(-\d+){1,2}$]
    package_version = "{}-{}".format(
        version_json["bazel-remote-cache"]["version"].removeprefix("v"),
        PKG_SERIAL,
    ),
    preexisting_volumes = [VOLUMENAME],
    project = "bazel-remote-cache",
)

# to check:   bazel query --output=build //spk/bazel-remote-cache:dockercompose
expand_template_rule(
    name = "dockercompose",
    out = "docker-compose.yaml",
    substitutions = {
        "{{CONTAINER_NAME}}": CONTAINER_NAME,
        "{{VERSION}}": version_json["bazel-remote-cache"]["version"],
        "{{VOLUME}}": VOLUMENAME,
    },
    template = ":docker-compose.tpl",
)
